fix layout bugs

--- a/src/styles/cards.module.css
+++ b/src/styles/cards.module.css
@@ -50,6 +50,7 @@
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
+  overflow-x: hidden;
 }
 
 @media (min-width: 340px) and (max-width: 500px) {
