--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,10 @@ header {
   border: none;
 }
 
+.dropdown-toggle::after {
+  display: none;
+}
+
 .navbar-brand a {
   color: white;
   font-weight: bold;
